<resources>
    <string name="app_name">iNurse</string>

    <!-- Strings relacionados con el login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Aceptar</string>
    <string name="error_invalid_email">El usuario no es válido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>

    <!-- Strings relacionados con el menu pacientes -->
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="realizar_solicitud">Realizar solicitud</string>
    <string name="mis_solicitudes">Mis solicitudes</string>
    <string name="seleccionar_menu">Seleccionar menú</string>
    <string name="mis_avisos">Mis avisos</string>
    <string name="informacion_hospital">Información</string>

    <!-- Strings relacionados con el menu personal -->
    <string name="configurar_avisos">Configurar avisos</string>
    <string name="menus_encargados">Menús encargados</string>
    <string name="ver_solicitudes">Ver solicitudes</string>
    <string name="mapa_camas">Mapa de camas</string>

    <!-- Strings relacionados con realizar solicitud paciente -->
    <string name="motivo_solicitud">Motivo de la solicitud</string>
    <string name="prioridad_asignada">Prioridad asignada</string>
    <string name="descripcion_de_la_solicitud">Descripción de la solicitud</string>
    <string name="enviar_solicitud">Enviar solicitud</string>

    <!-- Strings relacionados con mis solicitudes paciente -->
    <string name="filtrar_por_estado">Filtar por estado</string>
    <string name="prioridad">Prioridad - </string>
    <string name="solicitud">Solicitud:</string>
    <string name="estado">Estado:</string>

    <!-- Strings relacionados con seleccionar menu paciente -->
    <string name="seleccione_el_menu">Seleccione su menú</string>
    <string name="primer_plato">Primer plato -</string>
    <string name="segundo_plato">Segundo plato -</string>
    <string name="postre">Postre -</string>

    <!-- Strings relacionados con seleccionar mis avisos paciente-->
    <string name="avisos_programados">Avisos programados</string>
    <string name="fecha_inicio_">Fecha inicio:</string>
    <string name="descripcion">Descripción:</string>

    <!-- Strings relacionados con listar solicitudes personal-->
    <string name="empezar_progreso">Empezar</string>

    <!-- Strings relacionados con rechazar solicitud personal-->
    <string name="rechazar">Rechazar</string>
    <string name="motivo_rechazo">Motivo del rechazo</string>
    <string name="cancelar">Cancelar</string>

    <!-- Strings relacionados con listar menus paciente personal-->
    <string name="filtrar_por_planta">Filtar por planta</string>

    <!-- Strings relacionados con configurar avisos personal-->
    <string name="paciente_alarma">Programar aviso</string>
    <string name="planta">Planta</string>
    <string name="habitacion">Habitación</string>
    <string name="repetir_alarma">¿Repetir aviso?</string>
    <string name="repetir_cada">Repetir cada</string>
    <string name="horas">horas</string>
    <string name="descripcion_alarma">Descripción aviso</string>
    <string name="programar">Programar</string>

    <!-- Strings relacionados con mapa de camas-->
    <string name="habitacion_">Habitación:</string>
    <string name="paciente_">Paciente:</string>
    <string name="sexo_">Sexo:</string>
    <string name="motivo_ingreso_">Motivo ingreso:</string>
    <string name="nombre_">Nombre:</string>
    <string name="apellidos_">Apellidos:</string>
    <string name="sip_">SIP:</string>
    <string name="nhc_">NHC:</string>
    <string name="telelefono_">Teléfono:</string>
    <string name="edad_">Edad:</string>
    <string name="direccion_">Dirección:</string>
    <string name="ciudad_">Ciudad:</string>
    <string name="provincia_">Provincia:</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="fecha_fin_">Fecha fin:</string>
    <string name="repetir_aviso_horas">Repetir cada #H# horas</string>
    <string name="sin_repeticion">Sin repetición</string>
    <string name="nacionalidad_">Nacionalidad:</string>
    <string name="hora_inicio_">Hora inicio:</string>
    <string name="primer_plato_">Primer plato:</string>
    <string name="segundo_plato_">Segundo plato:</string>
    <string name="postre_">Postre:</string>
    <string name="contentDescription_detallePaciente">Foto del paciente</string>
    <string name="contentDescription_iconoCalendario">Icono calendario</string>
    <string name="contentDescription_iconoReloj">Icono reloj</string>
    <string name="login_title">Bienvenido a iNurse</string>
    <string name="visualizar_avisos">Ver avisos</string>

    <string name="login">Autenticarse</string>
    <string name="menu_principal">Menu principal</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="menus">Menús</string>
    <string name="avisos">Mis avisos</string>
    <string name="informacion">Información</string>
    <string name="rechazar_solicitud">Rechazar solicitud</string>
    <string name="detalle_paciente">Información del paciente</string>
    <string name="avisos_activos">Avisos activos</string>
</resources>
