<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.gui.personal.MenuPersonalActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/bt_menu_personal_solicitudes"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/menu_button_style"
            android:drawableLeft="@drawable/ver_solicitudes"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingLeft="20dp"
            android:text="@string/ver_solicitudes"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_menu_personal_mapa"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/menu_button_style"
            android:drawableLeft="@drawable/hospital_bed"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingLeft="20dp"
            android:text="@string/mapa_camas"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_menu_personal_menus"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/menu_button_style"
            android:drawableLeft="@drawable/meal"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingLeft="20dp"
            android:text="@string/menus_encargados"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_menu_personal_avisos"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/menu_button_style"
            android:drawableLeft="@drawable/smartphone"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingLeft="20dp"
            android:text="@string/visualizar_avisos"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_menu_personal_configurar"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:background="@drawable/menu_button_style"
            android:drawableLeft="@drawable/user_warning"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:paddingLeft="20dp"
            android:text="@string/configurar_avisos"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:text="@string/cerrar_sesion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bt_menu_personal_cerrar_sesion"
            style="@style/Widget.AppCompat.Button"
            android:background="@drawable/menu_button_style"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:drawablePadding="25dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/logout"
            android:gravity="left|center_vertical|center_horizontal|center" />

    </LinearLayout>
</RelativeLayout>
