<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_pacientes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tfm.muuinf.viciano.lledo.alejandro.inurse.gui.pacientes.MenuPacientesActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <Button
            android:text="@string/realizar_solicitud"
            android:layout_width="match_parent"
            android:id="@+id/bt_menu_paciente_realizar_solicitud"
            android:elevation="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/menu_button_style"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:drawablePadding="25dp"
            android:drawableLeft="@drawable/make_solicitud"
            android:paddingLeft="20dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:layout_height="85dp" />

        <Button
            android:text="@string/mis_solicitudes"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:id="@+id/bt_menu_paciente_mis_solicitudes"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/menu_button_style"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:drawableLeft="@drawable/ver_solicitudes" />

        <Button
            android:text="@string/seleccionar_menu"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:id="@+id/bt_menu_paciente_selec_menu"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/menu_button_style"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:drawableLeft="@drawable/cooker" />

        <Button
            android:text="@string/mis_avisos"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:id="@+id/bt_menu_paciente_mis_avisos"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/menu_button_style"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:drawableLeft="@drawable/danger" />

        <Button
            android:text="@string/informacion_hospital"
            android:layout_width="match_parent"
            android:id="@+id/bt_menu_paciente_info_hosp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/menu_button_style"
            android:drawablePadding="25dp"
            android:gravity="left|center_vertical|center_horizontal"
            android:drawableLeft="@drawable/info"
            android:layout_height="85dp" />

        <Button
            android:text="@string/cerrar_sesion"
            android:layout_width="match_parent"
            style="@style/Widget.AppCompat.Button"
            android:background="@drawable/menu_button_style"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:drawablePadding="25dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/logout"
            android:gravity="left|center_vertical|center_horizontal|center"
            android:id="@+id/bt_menu_paciente_cerrar_sesion"
            android:layout_height="match_parent" />

    </LinearLayout>
</RelativeLayout>
