<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv_listar_solicitudes">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/prioridad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="normal|bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_listar_solicitudes_prioridad"
                    android:layout_weight="0.16"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_marginStart="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_listar_solicitudes_fecha"
                    android:layout_weight="1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:text="@string/estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_listar_solicitudes_estado"
                    android:layout_weight="1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_marginStart="3dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:text="@string/paciente_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_listar_solicitudes_paciente"
                    android:layout_weight="1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_marginStart="3dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:text="@string/habitacion_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_listar_solicitudes_habitacion"
                    android:layout_weight="1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_marginStart="3dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:text="@string/solicitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|bold"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_listar_solicitudes_solicitud"
                    android:layout_weight="1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_marginStart="3dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_listar_solicitudes_descripcion"
                android:textColor="?android:attr/textColorPrimary"
                android:layout_marginTop="10dp"
                android:textAlignment="viewStart"
                android:textAllCaps="false" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <Button
                    android:text="@string/empezar_progreso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/bt_listar_solicitudes_empezar" />

                <Button
                    android:text="@string/rechazar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_listar_solicitudes_rechazar"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>